--- a/mock2html.scss
+++ b/mock2html.scss
@@ -20,3 +20,102 @@
 body {
   font-family: "proxima_nova_light";
 }
+
+h1 {
+  font-size: 20px;
+  font-family: "proxima_nova_semibold";
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 24px;
+  font-family: "proxima_nova_semibold";
+  margin-top: 0;
+  margin-bottom: 20px;
+  letter-spacing: 1.5px;
+}
+
+p {
+  font-size: 20px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 25px;
+}
+
+.content {
+  width: 85%;
+}
+
+.service-option {
+  width: 50%;
+  float: left;
+
+  strike  {
+    color: #e7e8e9;
+  }
+}
+
+.monthly {
+  background-color: #e7e8e9;
+  padding: 30px;
+  padding-left: 25px;
+  color: #727375;
+
+  .pricing {
+    margin-bottom: 55px;
+  }
+}
+
+.prepaid {
+  border-color: #b3b4b6;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 6px;
+  color: #323335;
+  padding: 30px;
+  padding-left: 40px;
+
+  h2 {
+    font-size: 36px;
+    font-family: "proxima_nova_semibold";
+    width: 80%;
+  }
+
+  p {
+    margin-bottom: 45px;
+    line-height: 1.5em;
+  }
+}
+
+.pricing {
+  font-size: 24px;
+  letter-spacing: 1.2px;
+}
+
+.buy-button {
+  color: white;
+  display: inline-block;
+  padding: 20px 35px 20px 20px;
+  background-color: #ffa803;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 2px;
+
+  &:before {
+    background-image: url("images/icon-cart-white-small.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    display: inline-block;
+    width: 23px;
+    height: 18px;
+    padding-right: 20px;
+    vertical-align: middle;
+  }
+}
