--- a/mock2html.scss
+++ b/mock2html.scss
@@ -17,8 +17,19 @@
   font-style: normal;
 }
 
+// Responsive mixin
+@mixin narrow {
+  @media (max-width: 719px) {
+    @content;
+  }
+}
+
 body {
   font-family: "proxima_nova_light";
+
+  @include narrow {
+    text-align: center;
+  }
 }
 
 h1 {
@@ -50,6 +61,11 @@ p {
 
 .content {
   width: 85%;
+
+  @include narrow {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 .service-option {
@@ -59,13 +75,23 @@ p {
   strike  {
     color: #e7e8e9;
   }
+
+  @include narrow {
+    width: 100%;
+    float: none;
+  }
 }
 
 .monthly {
+  $padding: 30px;
   background-color: #e7e8e9;
-  padding: 30px;
+  padding: $padding;
   padding-left: 25px;
   color: #727375;
+
+  @include narrow {
+    padding-left: $padding;
+  }
 
   .pricing {
     margin-bottom: 55px;
@@ -73,18 +99,27 @@ p {
 }
 
 .prepaid {
+  $padding: 30px;
   border-color: #b3b4b6;
   border-radius: 10px;
   border-style: solid;
   border-width: 6px;
   color: #323335;
-  padding: 30px;
+  padding: $padding;
   padding-left: 40px;
+
+  @include narrow {
+    padding-left: $padding;
+  }
 
   h2 {
     font-size: 36px;
     font-family: "proxima_nova_semibold";
     width: 80%;
+
+    @include narrow {
+      width: 100%;
+    }
   }
 
   p {
