--- a/mock2html.scss
+++ b/mock2html.scss
@@ -1,3 +1,7 @@
+/*
+Fonts
+*/
+
 @font-face {
   font-family: 'proxima_nova_semibold';
   src: url('fonts/proximanova-semibold-webfont.eot');
@@ -17,12 +21,19 @@
   font-style: normal;
 }
 
-// Responsive mixin
+/*
+Mixins
+*/
+
 @mixin narrow {
   @media (max-width: 719px) {
     @content;
   }
 }
+
+/*
+Layout
+*/
 
 body {
   font-family: "proxima_nova_light";
